--- a/com.cheezburger.simple/AndroidManifest.xml
+++ b/com.cheezburger.simple/AndroidManifest.xml
@@ -17,6 +17,11 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="http" android:host="cheezburger.com" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="image/*" />
+            </intent-filter>
         </activity>
     </application>
 </manifest>
